2006/09/05 Sarka Todorova <sarka.todorova@cern.ch>
	* identification of active layers
	* inert material included (barrel toroids) 
        * tagged MuonTrackingGeometry-00-00-09

2006/06/23 Sarka Todorova <sarka.todorova@cern.ch>
	* active material included 
        * tagged MuonTrackingGeometry-00-00-07

2006/05/15 Sarka Todorova <sarka.todorova@cern.ch>
	* bug fixed (wrong cylinder surface called for beam pipe glueing) 
        * tagged MuonTrackingGeometry-00-00-06

2006/05/11 Sarka Todorova <sarka.todorova@cern.ch>
        * first attempt to close the global tracking geometry
	* using up-to-date gluing tools
	* tagged MuonTrackingGeometry-00-00-05
	* intermediate versions concerned bux fixing and modified interface (obsolete) 
	
13/02/2006 version 00-00-01 /S.T./

	returns closed tracking geometry in 2 versions
	a/ "MuonSimple = True" single global volume (analog to worldVolume)
	b/ "MuonSimple = False" mimics MuonEnvelope with cut out for cavern description
	                                
	consists of : muonBarrel      [rmin=4300; rmax=13000;  -6740<z<+6740 ]
                     +muonInnerEndcap [rmin=  70; rmax=13000;   6740<z<+12900 ]     
                     -muonInnerEndcap [rmin=  70; rmax=13000;  -6740>z>-12900 ]     
	             +muonOuterEndcap [rmin=  70; rmax=12500;  12900<z<+22030 ]
 	             -muonOuterEndcap [rmin=  70; rmax=12500; -12900>z>-22030 ] 

	additional volumes necessary to close the geometry:

	   beamPipe [rmax=70; -22030> z > 22030] 
	   other    [rmin=70; rmax=4300;  -6740<z<+6740 ]   supplies ID+Calo
	 +-cavern   [rmin=12500;rmax=13000; as outerEndCap ]  to fill the cutout

       Envelope volumes:
	   barrel = muonBarrel + other 
	   outerEndcap = muonOuterEndcap + cavern
	   detector = barrel + muonInnerEndcap + outerEndcap
	   globalVolume = detector + beamPipe

---------------------------------------------------------------------------------	