@@ -159,6 +159,7 @@ const std::vector<const Trk::DetachedTrackingVolume*>* Muon::MuonInertMaterialBu
   if (m_muonMgr) {
     // retrieve muon station prototypes from GeoModel
     const std::vector<const Trk::TrackingVolume*>* msTypes = buildDetachedTrackingVolumeTypes();
+    std::cout << " obtained " << msTypes->size() << " prototypes" << std::endl;
 
     // retrieve muon objects from GeoModel
     if (msTypes->size()) {
@@ -168,11 +169,16 @@ const std::vector<const Trk::DetachedTrackingVolume*>* Muon::MuonInertMaterialBu
         const GeoVPhysVol* cv = &(*(top->getChildVol(ichild)));
         const GeoLogVol* clv = cv->getLogVol();
         std::string vname = clv->getName();
-       if (vname.substr(0,10)=="BTBevelled" ||
+//        if (vname.substr(0,14)=="BTBevelledLong" ||
+        if (vname.substr(0,10)=="BTBevelled" ||
 	       (vname.substr(0,6)=="BTCold" && vname.substr(0,9)!="BTColdRib")
-	       || vname.substr(0,3)=="XXX")     //  not to build endcap ECT
+	       || vname.substr(0,3)=="ECT")     //  ECT
+//        if (vname.substr(0,17)=="BTColdLongSegment" || vname.substr(0,18)=="BTColdShortSegment")
+//           if (vname.substr(0,6)=="BTCold" && vname.substr(0,9)!="BTColdRib" && vname.substr(0,17)!="BTColdLongSegment" && vname.substr(0,18)!="BTColdShortSegment")
 	{
 	  HepTransform3D transf = top->getXToChildVol(ichild);
+//	  HepTransform3D transf =HepTransform3D();
+	  std::cout <<"MW volume: "<<vname<<" position:" << transf.getTranslation() << std::endl;
 	  std::vector<const Trk::TrackingVolume*>::const_iterator msTypeIter = msTypes->begin();
 
 	  for (; msTypeIter != msTypes->end(); ++msTypeIter) {
@@ -183,6 +189,7 @@ const std::vector<const Trk::DetachedTrackingVolume*>* Muon::MuonInertMaterialBu
 		  const Trk::DetachedTrackingVolume* newStat = typeStat->clone(vname,transf);
 
 		  mInert.push_back(newStat);
+		  std::cout<<"MW building inert element: "<<vname<<" position "<<transf.getTranslation()<<std::endl;
 		}
 	  } // msType
 	}
@@ -192,13 +199,13 @@ const std::vector<const Trk::DetachedTrackingVolume*>* Muon::MuonInertMaterialBu
   const std::vector<const Trk::DetachedTrackingVolume*>* muonObjects=new std::vector<const Trk::DetachedTrackingVolume*>(mInert);
   std::cout << "muonInertMaterialBuilder returns:" << (*muonObjects).size() << std::endl;
 ///////////////////////////////////////////////////////////////////////////////////////
-  // checkObject(muonObjects);
+   checkObject(muonObjects);
 ///////////////////////////////////////////////////////////////////////////////////////
   return muonObjects;
 
 }
 
-const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::buildDetachedTrackingVolumeTypes() const 
+const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::buildDetachedTrackingVolumeTypes() const
 {
     MsgStream log( msgSvc(), name() );
 
@@ -210,16 +217,23 @@ const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::b
     if (m_muonMgr){
 
       // link to top tree
+      std::cout << "number of top tree:" << m_muonMgr->getNumTreeTops() << std::endl;
       const GeoVPhysVol* top = &(*(m_muonMgr->getTreeTop(0)));
 
-      for (unsigned int ichild =0; ichild< top->getNChildVols(); ichild++) 
+
+      for (unsigned int ichild =0; ichild< top->getNChildVols(); ichild++)
       {
-        const GeoVPhysVol* cv = &(*(top->getChildVol(ichild))); 
+        const GeoVPhysVol* cv = &(*(top->getChildVol(ichild)));
         const GeoLogVol* clv = cv->getLogVol();
         std::string vname = clv->getName();
         if ((vname.size()>7 && vname.substr(vname.size()-7,7) !="Station") ||  vname.size()<8 )     // Inert element
 	{
+	  std::cout << " INERT muon object found:" << vname <<" "<<ichild<< std::endl;
+
+
+
 	  if (vname.substr(0,10)=="BTBevelled"){
+			std::cout << vname<<","<<clv->getShape()->type() <<","<<std::endl;
 
 	          // is it in objs vector?
 		bool inObjs = false;
@@ -230,22 +244,26 @@ const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::b
                 if ( !inObjs) {
                   Trk::BevelledCylinderVolumeBounds* envBounds = decodeBevelledCylinder(clv->getShape());
 
-		  if (envBounds) {
-		    const Trk::Volume* envelope= new Trk::Volume(new HepTransform3D(),envBounds);
-		    Trk::MaterialProperties newMaterialProp= m_materialConverter->convert( clv->getMaterial() );
+		    if (envBounds) {
+			const Trk::Volume* envelope= new Trk::Volume(new HepTransform3D(),envBounds);
+			Trk::MaterialProperties newMaterialProp= m_materialConverter->convert( clv->getMaterial() );
 
-		    const Trk::TrackingVolume* newType= new Trk::TrackingVolume( *envelope,
-										 newMaterialProp,
-										 m_muonMagneticField,
-										 0,0,  // second: confinedVolumes
-										 vname);
-		    objs.push_back(newType);
+
+			const Trk::TrackingVolume* newType= new Trk::TrackingVolume( *envelope,
+										newMaterialProp,
+										m_muonMagneticField,
+										0,0,  // second: confinedVolumes
+										vname);
+
+
+			objs.push_back(newType);
                   }
 	        }
 	  }
 
 // Cold segments
 	  if (vname.substr(0,6)=="BTCold" && vname.substr(0,9)!="BTColdRib"){
+			std::cout << vname<<","<<clv->getShape()->type() <<","<<std::endl;
 
 	          // is it in objs vector?
 		bool inObjs = false;
@@ -255,17 +273,20 @@ const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::b
 
                 if ( !inObjs) {
                   Trk::TrapezoidVolumeBounds* envBounds = decodeColdSegment(clv->getShape());
+//                  Trk::CuboidVolumeBounds* envBounds = decodeColdSegment(clv->getShape());
 
 		    if (envBounds) {
 		        HepTransform3D* tTr = new HepTransform3D( HepRotateX3D(90*deg) );
 			const Trk::Volume* envelope= new Trk::Volume( tTr, envBounds);
 			Trk::MaterialProperties newMaterialProp= m_materialConverter->convert( clv->getMaterial() );
 
+
 			const Trk::TrackingVolume* newType= new Trk::TrackingVolume( *envelope,
 										newMaterialProp,
 										m_muonMagneticField,
 										0,0,  // second: confinedVolumes
 										vname);
+
 
 			objs.push_back(newType);
                   }
@@ -275,6 +296,8 @@ const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::b
 
 // ECT (EndcapToroid) segments
 	  if (vname.substr(0,3)=="ECT" ){
+//	  if (vname.substr(0,7)=="ECTWall" ){
+			std::cout << vname<<","<<clv->getShape()->type() <<","<<std::endl;
 
 	          // is it in objs vector?
 		bool inObjs = false;
@@ -284,31 +307,47 @@ const std::vector<const Trk::TrackingVolume*>* Muon::MuonInertMaterialBuilder::b
 
                 if ( !inObjs) {
                   Trk::VolumeBounds* envBounds = decodeECTSegment(clv->getShape());
+//Trk::CylinderVolumeBounds* envBounds = new Trk::CylinderVolumeBounds(300.,600.,10000.);
 
 		    if (envBounds) {
-                        HepTransform3D* tTr=0;
-                        if (vname.substr(0,21)=="ECTEndplateStdSegment" ){
+		    std::cout<<"MW///////////// "<<vname<<std::endl;
+                    envBounds->dump(std::cout);
+		    std::cout<<std::endl;
+		    std::cout<<"MW/////////////"<<std::endl;
+//		        HepTransform3D* tTr = new HepTransform3D( HepRotateX3D(90*deg) );
+                        HepTransform3D* tTr;
+                        if (vname.substr(0,11)=="ECTEndplate" ||vname.substr(0,7)=="ECTWall" ){
 			 const Trk::TrapezoidVolumeBounds* trd = dynamic_cast<const Trk::TrapezoidVolumeBounds*> (envBounds);
                          tTr = new HepTransform3D( HepTranslateY3D(
 			 trd->halflengthY()*(trd->maxHalflengthX()+trd->minHalflengthX())
 			 /(trd->maxHalflengthX()-trd->minHalflengthX())
-			 )  *HepTranslateY3D(2000.));
+			 )  *HepTranslateY3D(0.));
 			}
 			else
-			 tTr = new HepTransform3D(HepTranslateY3D(2000.));
+			 tTr = new HepTransform3D(HepTranslateY3D(0.));
 			const Trk::Volume* envelope= new Trk::Volume( tTr, envBounds);
 			Trk::MaterialProperties newMaterialProp= m_materialConverter->convert( clv->getMaterial() );
 
-			const Trk::TrackingVolume* newType= new Trk::TrackingVolume( *envelope,
-										newMaterialProp,
-										m_muonMagneticField,
-										0,0,  // second: confinedVolumes
-										vname);
+
+			const Trk::TrackingVolume* newType= new Trk::TrackingVolume(
+									*envelope,
+									newMaterialProp,
+									m_muonMagneticField,
+									0,0,  // second: confinedVolumes
+									vname);
+
+
 			objs.push_back(newType);
                     }
+
 	        }
 	  }
+
+
+
 	}
+
+
       }
    }
 
@@ -331,25 +370,20 @@ StatusCode Muon::MuonInertMaterialBuilder::finalize()
 
 Trk::BevelledCylinderVolumeBounds* Muon::MuonInertMaterialBuilder::decodeBevelledCylinder(const GeoShape* sh) const
 {
-  const GeoBox* box = 0;
+  //std::cout << "  decoding shape " << sh->type() << std::endl;
   while ( sh->type() == "Subtraction" ) {
     const GeoShapeSubtraction* sub = dynamic_cast<const GeoShapeSubtraction*> (sh);
-     if (sub->getOpB()->type()=="Shift"){
-      const GeoShapeShift* shift = dynamic_cast<const GeoShapeShift*>(sub->getOpB());
-       if (shift->getOp()->type()=="Box") {
-          box = dynamic_cast<const GeoBox*>(shift->getOp());
-       }
-     }
     sh = sub->getOpA();
   }
+  // std::cout << "  found the last shape " << sh->type() << std::endl;
   if ( sh->type() == "Tube" ) {
     const GeoTube* tube=dynamic_cast<const GeoTube*> (sh);
-
+    //std::cout <<"Found tube:" << tube->getRMax() <<"," << tube->getRMin() << "," << tube->getZHalfLength() <<std::endl;
 //  MW hard-coded angle, to be changed!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 //    double theta = 0.3927;
     double theta = 22.5*deg;
     return new Trk::BevelledCylinderVolumeBounds(tube->getRMin(),tube->getRMax(),
-             (tube->getZHalfLength()),theta,theta);
+              tube->getZHalfLength(),theta,theta);
   }
   return new Trk::BevelledCylinderVolumeBounds()=0;
 }
@@ -360,7 +394,130 @@ Trk::BevelledCylinderVolumeBounds* Muon::MuonInertMaterialBuilder::decodeBevelle
 
 Trk::VolumeBounds* Muon::MuonInertMaterialBuilder::decodeECTSegment(const GeoShape* sh) const
 {
-  return 0; 
+  std::cout << "MW ECT  decoding shape " << sh->type() << std::endl;
+
+  while ( sh->type() == "Subtraction" || sh->type() == "Union" ) {
+    if (sh->type() == "Subtraction") {
+      const GeoShapeSubtraction* sub = dynamic_cast<const GeoShapeSubtraction*> (sh);
+      	std::cout << "MW ECT "<<sub->type()<<","<<sub->getOpA()->type()<<","<<sub->getOpB()->type() << std::endl;
+	if (sub->getOpA()->type()=="Pgon") {
+		const GeoPgon* box = dynamic_cast<const GeoPgon*>(sub->getOpA());
+		std::cout <<"MW ECT Pgon "<<box->getSPhi() <<","<<box->getDPhi()<<","<<box->getNSides()<<","<< box->getNPlanes()<<std::endl;
+		unsigned int i = box->getNPlanes();
+		for (unsigned int j=0; j<i; j++){
+		std::cout <<box->getZPlane(j)<<","<<box->getRMinPlane(j)<<","<<box->getRMaxPlane(j)<<","<<std::endl;
+		}
+//		return new Trk::CylinderVolumeBounds(40.,50.,500.);
+	//          return new Trk::CylinderVolumeBounds(box->getRMinPlane(0),box->getRMaxPlane(0),fabs(box->getZPlane(1)-box->getZPlane(0)));
+	}
+	if (sub->getOpB()->type()=="Shift"){
+	const GeoShapeShift* shift = dynamic_cast<const GeoShapeShift*>(sub->getOpB());
+	std::cout <<"MW ECT Shift "<<shift->getOp()->type()<<","<<
+	(shift->getX()).getTranslation()<<(shift->getX()).getRotation() << std::endl;
+	if (shift->getOp()->type()=="Box") {
+		const GeoBox* box = dynamic_cast<const GeoBox*>(shift->getOp());
+		std::cout <<"MW ECT Box "<<box->getXHalfLength()<<","<<box->getYHalfLength()<<","<<box->getZHalfLength()<<","<< std::endl;
+	}
+	if (shift->getOp()->type()=="Pgon") {
+		const GeoPgon* box = dynamic_cast<const GeoPgon*>(shift->getOp());
+		std::cout <<"MW ECT Pgon "<<box->getSPhi() <<","<<box->getDPhi()<<","<<box->getNSides()<<","<< box->getNPlanes()<<std::endl;
+		unsigned int i = box->getNPlanes();
+		for (unsigned int j=0; j<i; j++){
+		std::cout <<box->getZPlane(j)<<","<<box->getRMinPlane(j)<<","<<box->getRMaxPlane(j)<<","<<std::endl;
+		}
+//		return new Trk::CylinderVolumeBounds(40.,50.,500.);
+	//          return new Trk::CylinderVolumeBounds(box->getRMinPlane(0),box->getRMaxPlane(0),fabs(box->getZPlane(1)-box->getZPlane(0)));
+	}
+	}
+	sh = sub->getOpA();
+    }
+    else {
+      const GeoShapeUnion* sub = dynamic_cast<const GeoShapeUnion*> (sh);
+      	std::cout << "MW ECT "<<sub->type()<<","<<sub->getOpA()->type()<<","<<sub->getOpB()->type() << std::endl;
+	if (sub->getOpA()->type()=="Pgon") {
+		const GeoPgon* box = dynamic_cast<const GeoPgon*>(sub->getOpA());
+		std::cout <<"MW ECT Pgon "<<box->getSPhi() <<","<<box->getDPhi()<<","<<box->getNSides()<<","<< box->getNPlanes()<<std::endl;
+		unsigned int i = box->getNPlanes();
+		for (unsigned int j=0; j<i; j++){
+		std::cout <<box->getZPlane(j)<<","<<box->getRMinPlane(j)<<","<<box->getRMaxPlane(j)<<","<<std::endl;
+		}
+//		return new Trk::CylinderVolumeBounds(40.,50.,500.);
+	//          return new Trk::CylinderVolumeBounds(box->getRMinPlane(0),box->getRMaxPlane(0),fabs(box->getZPlane(1)-box->getZPlane(0)));
+	}
+	if (sub->getOpB()->type()=="Shift"){
+	const GeoShapeShift* shift = dynamic_cast<const GeoShapeShift*>(sub->getOpB());
+	std::cout <<"MW ECT Shift "<<shift->getOp()->type()<<","<<
+	(shift->getX()).getTranslation()<<(shift->getX()).getRotation() << std::endl;
+	if (shift->getOp()->type()=="Box") {
+		const GeoBox* box = dynamic_cast<const GeoBox*>(shift->getOp());
+		std::cout <<"MW ECT Box "<<box->getXHalfLength()<<","<<box->getYHalfLength()<<","<<box->getZHalfLength()<<","<< std::endl;
+	}
+	if (shift->getOp()->type()=="Pgon") {
+		const GeoPgon* box = dynamic_cast<const GeoPgon*>(shift->getOp());
+		std::cout <<"MW ECT Pgon "<<box->getSPhi() <<","<<box->getDPhi()<<","<<box->getNSides()<<","<< box->getNPlanes()<<std::endl;
+		unsigned int i = box->getNPlanes();
+		for (unsigned int j=0; j<i; j++){
+		std::cout <<box->getZPlane(j)<<","<<box->getRMinPlane(j)<<","<<box->getRMaxPlane(j)<<","<<std::endl;
+		}
+//		return new Trk::CylinderVolumeBounds(40.,50.,500.);
+	//          return new Trk::CylinderVolumeBounds(box->getRMinPlane(0),box->getRMaxPlane(0),fabs(box->getZPlane(1)-box->getZPlane(0)));
+	}
+	}
+	sh = sub->getOpA();
+    }
+
+  }
+  std::cout << "ECT  found the last shape " << sh->type() << std::endl;
+
+  if ( sh->type() == "Trd" ) {
+    const GeoTrd* trd=dynamic_cast<const GeoTrd*> (sh);
+    std::cout <<"Found Trd:" <<trd->getXHalfLength1()<<" "<< trd->getXHalfLength2()<<" " <<trd->getYHalfLength1()<<" "<< trd->getYHalfLength2()<<" "<< trd->getZHalfLength()<<std::endl;
+        double halfX1 = trd->getXHalfLength1();
+        double halfX2 = trd->getXHalfLength2();
+        double halfY1 = trd->getYHalfLength1();
+        //double halfY2 = trd->getYHalfLength2();
+        double halfZ  = trd->getZHalfLength();
+//        Trk::CuboidVolumeBounds* volBounds = new Trk::CuboidVolumeBounds(halfX1,halfY1,halfZ);
+        return new Trk::TrapezoidVolumeBounds(fmin(halfX1,halfX2),fmax(halfX1,halfX2),halfZ,halfY1);
+  }
+  if ( sh->type() == "Box" ) {
+    const GeoBox* box=dynamic_cast<const GeoBox*> (sh);
+    std::cout <<"Found Box:" <<box->getXHalfLength()<<" "<<box->getYHalfLength()<<" "<< box->getZHalfLength()<<std::endl;
+        double halfX = box->getXHalfLength();
+        double halfY = box->getYHalfLength();
+        double halfZ = box->getZHalfLength();
+//        Trk::CuboidVolumeBounds* volBounds = new Trk::CuboidVolumeBounds(halfX1,halfY1,halfZ);
+        return new Trk::CuboidVolumeBounds(halfX,halfY,halfZ);
+//        return new Trk::CuboidVolumeBounds(200.,200.,200.);
+  }
+
+  if ( sh->type() == "Tube" ) {
+    const GeoTube* tube=dynamic_cast<const GeoTube*> (sh);
+
+    std::cout <<"Found tube:" << tube->getRMax() <<"," << tube->getRMin() << "," << tube->getZHalfLength() <<std::endl;
+    return new Trk::CylinderVolumeBounds(tube->getRMin(),tube->getRMax(),tube->getZHalfLength());
+  }
+  if ( sh->type() == "Pgon" ) {
+    const GeoPgon* box=dynamic_cast<const GeoPgon*> (sh);
+
+          std::cout <<"MW ECT Pgon "<<box->getSPhi() <<","<<box->getDPhi()<<","<<box->getNSides()<<","<< box->getNPlanes()<<std::endl;
+          unsigned int i = box->getNPlanes();
+          for (unsigned int j=0; j<i; j++){
+            std::cout <<box->getZPlane(j)<<","<<box->getRMinPlane(j)<<","<<box->getRMaxPlane(j)<<","<<std::endl;
+          }
+//    return new Trk::CylinderVolumeBounds(box->getRMinPlane(0),box->getRMaxPlane(0),fabs(box->getZPlane(1)-box->getZPlane(0)));
+    double hlz = fabs(box->getZPlane(1)-box->getZPlane(0))/2.;
+    double hly =(box->getRMaxPlane(0)*cos(box->getDPhi()/2.)+box->getRMinPlane(0)*cos(box->getDPhi()/2.))/2.;
+    double hlxmin =box->getRMinPlane(0)*sin(box->getDPhi()/2.);
+    double hlxmax =box->getRMaxPlane(0)*sin(box->getDPhi()/2.);
+    return new Trk::TrapezoidVolumeBounds(hlxmin,hlxmax,hly,hlz);
+//    return new Trk::TrapezoidVolumeBounds(300.,300.,500.,500.);
+
+  }
+
+  return new Trk::CylinderVolumeBounds();
+//  return new Trk::CylinderVolumeBounds(1000.,1200.,2000.);
+
 }
 
 
@@ -369,20 +526,74 @@ Trk::VolumeBounds* Muon::MuonInertMaterialBuilder::decodeECTSegment(const GeoSha
 
 Trk::TrapezoidVolumeBounds* Muon::MuonInertMaterialBuilder::decodeColdSegment(const GeoShape* sh) const
 {
+  std::cout << "  decoding shape " << sh->type() << std::endl;
 
   if (sh->type() == "Trd") {
   	const GeoTrd* trapezoid = dynamic_cast<const GeoTrd*> (sh);
+        std::cout << trapezoid->getXHalfLength1()<<" "
+		  << trapezoid->getXHalfLength2()<<" "
+		  << trapezoid->getYHalfLength1()<<" "
+		  << trapezoid->getYHalfLength2()<<" "
+		  << trapezoid->getZHalfLength()<<" "
+		  <<std::endl;
 
         double halfX1 = trapezoid->getXHalfLength1();
         double halfX2 = trapezoid->getXHalfLength2();
         double halfY1 = trapezoid->getYHalfLength1();
         //double halfY2 = trapezoid->getYHalfLength2();
         double halfZ  = trapezoid->getZHalfLength();
+//        Trk::CuboidVolumeBounds* volBounds = new Trk::CuboidVolumeBounds(halfX1,halfY1,halfZ);
         Trk::TrapezoidVolumeBounds* volBounds = new
  	        Trk::TrapezoidVolumeBounds(fmin(halfX1,halfX2),fmax(halfX1,halfX2),halfZ,halfY1);
+                std::cout<<" Dump TrapezoidVolume Bounds "<<std::endl;
+		volBounds->dump(std::cout);
+		std::cout<<std::endl;
+
+//         if (halfX1==halfX2 && halfY1==halfY2) volBounds
+// 	 = new Trk::TrapezoidVolumeBounds(halfX1,halfX1,halfY1,halfZ);
+//         if (halfX1==halfX2 && halfY1!=halfY2 ) {
+//              HepTransform3D transf = transf*HepRotateY3D(90*deg)*HepRotateZ3D(90*deg);
+//              volBounds = new
+// 	        Trk::TrapezoidVolumeBounds(fmin(halfY1,halfY2),fmax(halfY1,halfY2),halfZ,halfX1);
+//         }
+//         if (halfX1!=halfX2 && halfY1==halfY2 ) {
+//              volBounds = new
+// 	        Trk::TrapezoidVolumeBounds(fmin(halfX1,halfX2),fmax(halfX1,halfX2),halfY1,halfZ);
+//         }
 
         return volBounds;
+//        double alpha = atan((trapezoid->getXHalfLength1()-trapezoid->getXHalfLength2())/2./trapezoid->getZHalfLength());
+//        return new Trk::TrapezoidVolumeBounds (trapezoid->getXHalfLength2(),trapezoid->getXHalfLength1() ,trapezoid->getYHalfLength1() ,trapezoid->getZHalfLength() );
+//        return new Trk::TrapezoidVolumeBounds (trapezoid->getXHalfLength2(),trapezoid->getYHalfLength1() ,trapezoid->getZHalfLength(), alpha,alpha   );
   }
+//  GeoShape* box = 0;
+
+//   while ( sh->type() == "Subtraction" ) {
+//     const GeoShapeSubtraction* sub = dynamic_cast<const GeoShapeSubtraction*> (sh);
+//     std::cout << sub->type()<<","<<sub->getOpA()->type()<<","<<sub->getOpB()->type() << std::endl;
+//      if (sub->getOpB()->type()=="Shift"){
+//       const GeoShapeShift* shift = dynamic_cast<const GeoShapeShift*>(sub->getOpB());
+//       std::cout <<"Shift "<<shift->getOp()->type()<<","<<
+//        (shift->getX()).getTranslation()<<(shift->getX()).getRotation() << std::endl;
+//        if (shift->getOp()->type()=="Box") {
+//           const GeoBox* box = dynamic_cast<const GeoBox*>(shift->getOp());
+//           std::cout <<"Box "<<box->getXHalfLength()<<","<<box->getYHalfLength()<<","<<box->getZHalfLength()<<","<< std::endl;
+//        }
+//      }
+//     sh = sub->getOpA();
+//   }
+//  std::cout << "  found the last shape " << sh->type() << std::endl;
+//   if ( sh->type() == "Tube" ) {
+//     const GeoTube* tube=dynamic_cast<const GeoTube*> (sh);
+//
+//     std::cout <<"Found tube:" << tube->getRMax() <<"," << tube->getRMin() << "," << tube->getZHalfLength() <<std::endl;
+// //  MW hard-coded angle, to be changed!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+// //    double theta = 0.3927;
+//     double theta = 22.5*deg;
+//     return new Trk::BevelledCylinderVolumeBounds(tube->getRMin(),tube->getRMax(),
+//              (tube->getZHalfLength()),theta,theta);
+//
+//   }
 
   return new Trk::TrapezoidVolumeBounds()=0;
 }
@@ -390,6 +601,11 @@ Trk::TrapezoidVolumeBounds* Muon::MuonInertMaterialBuilder::decodeColdSegment(co
 
 //////////////////////////
   void Muon::MuonInertMaterialBuilder::checkObject( const std::vector<const Trk::DetachedTrackingVolume*>* trkVolumes) const{
+
+//       const GlobalPosition* center = trkVolume->center();
+
+
+
 
        std::vector<const Trk::DetachedTrackingVolume*>::const_iterator msTypeIter = trkVolumes->begin();
 //// printout loop
@@ -461,7 +677,7 @@ Trk::TrapezoidVolumeBounds* Muon::MuonInertMaterialBuilder::decodeColdSegment(co
        double Zmin=  11000. ;
        double Zmax=  13000. ;
 
-      int N = 100;
+      int N = 10;
        for (int i=0;i<N;i++){
         for (int j=0;j<N;j++){
          for (int k=0;k<N;k++){
