@@ -1,3 +1,9 @@
+2006/09/07 Sarka Todorova <sarka.todorova@cern.ch>
+	* updates from Marcin:
+	* endcap toroids 
+	* cylinder volumes in MuonTrackingGeometryBuilder 
+        * tagged MuonTrackingGeometry-00-00-10
+
 2006/09/05 Sarka Todorova <sarka.todorova@cern.ch>
 	* identification of active layers
 	* inert material included (barrel toroids) 
